--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -3,30 +3,33 @@
     width: 650px;
     border-collapse: collapse;
     margin: 0 auto;
+    margin-bottom: 50px;
+    box-shadow: 0px 5px 6px -3px rgba(34, 60, 80, 0.45);
   }
   
   .transactionHistory th {
-    text-transform: capitalize;
+    text-transform: uppercase;
     background-color: #00bcd4;
     color: white;
     padding: 10px;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
   }
   
   .transactionHistory tbody tr:nth-child(even) {
     background-color: #f5f5f5;
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
   }
   
   .transactionHistory tbody tr:nth-child(odd) {
     background-color: white;
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
   }
   
   .transactionHistory td {
     padding: 10px;
-    text-align: center;
+    text-align: left;
     border: 1px solid #ddd;
+    text-transform: capitalize;
   }
+
+  
   
