--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -26,7 +26,7 @@
   
   .transactionHistory td {
     padding: 10px;
-    text-align: left;
+    text-align: center;
     border: 1px solid #ddd;
     text-transform: capitalize;
   }
